--- a/week-04/index.html
+++ b/week-04/index.html
@@ -5,17 +5,20 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link rel="stylesheet" href="screen.css" />
+  <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <form action="#" id="info">
     <label for="username">Username</label>
     <input type="text" id="username" maxlength="4" name="username" />
-    <label for="telephone">Email Address</label>
+    <label for="email">Email Address</label>
+	<input id="email" name="email" />
+	<label for="telephone">Phone Number</label>
     <input id="telephone" name="telephone" />
     <label for="biography">Biography</label>
     <textarea id="biography"></textarea>
     <label for="password">Password</label>
-    <input type="password" name="password" />
+    <input id="password" name="password" />
     <input type="submit" id="submit" name="Submit" />
 </body>
 </html>
